tests/paczka1/small_fuzzy/20288668.err
Error in line 3: NSfr50 A555 47,6
Error in line 5: XTz09ZF S560 44,4
